<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityFlatBank">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:background="@drawable/flat_bank_icon"
        android:layout_marginTop="65dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toStartOf="@+id/Calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration_flat"
        android:textColor="@color/light_purple_demo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="519dp"
        android:background="@color/light_blue_demo"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="41dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calculate">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Password_flat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="73dp"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Login_hint_flat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="73dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password_hint_flat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="34dp"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="73dp"/>

        <Button
            android:id="@+id/button_entrance"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:background="@drawable/button_skin"
            android:text="@string/Entrance_button_flat"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:layout_marginTop="183dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>